--- a/style.css
+++ b/style.css
@@ -5,4 +5,11 @@ font-family: 'Times New Roman', Times, serif;
 display: flex;
 justify-content: center;
 align-items: center;
+height: 700px;
+margin: 0px;
+}
+button{
+    background: red;
+    color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
